--- a/src/Pages/HomePage/Home.scss
+++ b/src/Pages/HomePage/Home.scss
@@ -21,6 +21,11 @@
   }
 }
 
+.footer {
+  text-align: center;
+  padding: 2rem;
+}
+
 @media screen and (max-width: 768px) {
   .app_hero_search {
     padding: 4rem 1rem;
